--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,16 +5,11 @@ repos:
   -   id: check-yaml
   -   id: end-of-file-fixer
   -   id: trailing-whitespace
+- repo: https://github.com/psf/black
+  rev: 23.10.0
+  hooks:
+  -   id: black
 - repo: https://github.com/PyCQA/isort
   rev: 5.12.0
   hooks:
   -   id: isort
-# - repo: https://github.com/astral-sh/ruff-pre-commit
-#   # Ruff version.
-#   rev: v0.5.0
-#   hooks:
-#     # Run the linter.
-#     - id: ruff
-#       args: ["--fix" ]
-#     # Run the formatter.
-#     - id: ruff-format
