--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   rev: 23.10.0
   hooks:
   -   id: black
-- repo: https://github.com/PyCQA/isort
-  rev: 5.12.0
-  hooks:
-  -   id: isort
+# - repo: https://github.com/PyCQA/isort
+#   rev: 5.12.0
+#   hooks:
+#   -   id: isort
