--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy
-scipy
-jax
-jaxlib
-optax
-flax @ git+https://github.com/google/flax.git
+numpy==1.26.4
+scipy==1.12
+jax==0.4.25
+jaxlib==0.4.25
+optax==0.2.2
+flax==0.8
 matplotlib
 gymnasium
 ml_collections
 wandb
+h5py
