--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ scipy==1.12
 jax==0.4.25
 jaxlib==0.4.25
 optax==0.2.2
-flax==0.8
+flax==0.8.0
+chex==0.1.86
+scikit-optimize==0.10.2
 matplotlib
 gymnasium
 ml_collections
